GNOME Bugzilla – Bug 739870
crop area doesn't work
Last modified: 2014-11-25 15:26:58 UTC
Created attachment 290327 [details] [review] Limit default size for avatar cropping Attachment 258107 [details] from Bug 710874 enlarged default size for cropping avatars thus crop rectangle could be easily bigger then image. The crop rectangle can't be modified and cc_crop_area_get_picture causes errors if the rectangle is bigger, because it has negative coordinates. Limit the default size to fit the image to fix the bug.
Review of attachment 290327 [details] [review]: Looks fine to me, please push to master and gnome-3-14 branches.
Review of attachment 290327 [details] [review]: Pushed to master and gnome-3-14 as f9d576e6420720d8a1f8c4cf77fa892e8ec8a76f and f9406b6b927344fd2f49e07f3bd6d0fa4ff4cf34.
Created attachment 291467 [details] [review] refactor crop area scaling code Recently committed patch 5fc3ae6 was modified before applying it into the g-c-c to be more readable. This patch reflect those changes in cheese. Would be good to commit it to synchronize those files as much as possible...
(The commit message contains wrong hash, it should be f9d576e instead.)
Review of attachment 291467 [details] [review]: Feel free to fix the commit message and then push.
Comment on attachment 291467 [details] [review] refactor crop area scaling code Thanks, committed with modified message to master as commit 1fd46c2e633e426945fd3b6437ccc5b37f49ff1d (don't think we need this for gnome-3-14 branch)