Limit default size for avatar cropping

Commit c605ad3578ff66452bd7b01d257f31c64e7905ef enlarged default size
for cropping avatars thus crop rectangle could be easily bigger then
image. The crop rectagle can't be modified and cc_crop_area_get_picture
causes errors if the rectangle is bigger, because it has negative
coordinates. Limit the default size to fit the image also.

https://bugzilla.gnome.org/show_bug.cgi?id=739870